Added bootstrap to project

--- a/reverse-tic-tac-toe/src/index.css
+++ b/reverse-tic-tac-toe/src/index.css
@@ -11,59 +11,28 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-.row {
-  display: flex;
-  flex-direction: row;
-}
 
-.column {
-  display: flex;
-  flex-direction: column;
-}
-
-.jc-center {
-  justify-content: center;
-}
-.app-header {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-  text-align: center;
-  background-color: #131A28;
-  color: white;
-  justify-content: center;
-  align-items: center;
-}
-
-.heading-text {
-  color: white;
-  font-size: 42px;
-  font-weight: bolder;
-  text-align: center;
-  margin: 50px;
-}
 
 .square {
-  min-width: 100px;
-  min-height: 100px;
+  height: 200px;
   font-size: 64px;
   text-align: center;
-  color: #1CDBF5;
+  color: red;
   font-weight: bolder;
   padding: 30px;
 }
 
-.b-bottom-right {
-  border-right: 15px solid #1CDBF5;
-  border-bottom: 15px solid #1CDBF5;
+.b-left {
+  border-left: 15px solid #1CDBF5;
 }
-
-.b-bottom {
-  border-bottom: 15px solid #1CDBF5;
+.b-bottom{
+border-bottom: 15px solid #1CDBF5;
 }
-
 .b-right {
   border-right: 15px solid #1CDBF5;
+}
+.b-top {
+  border-top: 15px solid #1CDBF5;
 }
 
 .clear-button {
